[package]
name = "ipynbat"
version = "0.1.0"
authors = ["Edgar Onghena <dev@edgar.bzh>"]
edition = "2018"

[dependencies]
base64 = "0.13"
dirs = "3.0"
image = "0.23"
pager = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termimad = "0.10"
uuid = { version = "0.8", features = ["serde", "v4"] }
viuer = "0.4"
